# pembantu-ai

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  generated.txt
.github/workflows/: deploy.yml
crates/pembantu_core/: Cargo.toml
crates/pembantu_core/src/: api.rs  bot.rs  error.rs  lib.rs  prompt.rs
crates/pembantu_core/src/api/: mod.rs  openrouter.rs
crates/pembantu_core/src/provider/: gemini.rs  mod.rs  openrouter.rs
crates/pembantu_core/src/provider/gemini/: client.rs  gemini.rs  mod.rs  types.rs
crates/pembantu_core/src/provider/openrouter/: client.rs  mod.rs  openrouter.rs  types.rs
crates/pembantu_telegram/: .env copy  Cargo.toml  example_response.rs
crates/pembantu_telegram/src/: command.rs  conversation.rs  main.rs  types.rs  updates.rs
crates/pembantu_telegram/src/media_kind/: common.rs
crates/pembantu_whatsapp/: Cargo.toml
crates/pembantu_whatsapp/src/: command.rs  conversation.rs  main.rs  types.rs
src/: main.rs
