[package]
name = "pembantu_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
async-trait = "0.1.77"
dotenv = "0.15.0"
reqwest = { version = "0.11.23", features = ["blocking", "json"]}
serde = { version = "1.0.195", features = ["derive"] }
