[package]
name = "pembantu_telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
edition = "2021"
name = "pembantu_telegram"
path = "src/main.rs"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
actix-rt = "2.9.0"
pembantu_core = { path = "../pembantu_core" }
serde_json = "1.0.112"
